force-app/main/default/objects/Lane_Price__c/Lane_Price__c.object-meta.xml
<CustomObject>
    <label>Lane Price</label>
    <nameField>
        <displayFormat>LP-{0000000}</displayFormat>
        <label>Lane Price Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lane Prices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>