force-app/main/default/objects/Lane_Price__c/fields/Additional_Stops__c.field-meta.xml
<CustomField>
    <fullName>Additional_Stops__c</fullName>
    <label>Price Per Stop</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>