force-app/main/default/objects/Lane_Price__c/fields/Delivery_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Country_Code__c</fullName>
    <formula>Lane__r.Destination_Location__r.Country_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Country Code</label>
    <type>Text</type>
</CustomField>