force-app/main/default/objects/Lane_Price__c/fields/Delivery_Location_Id__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Location_Id__c</fullName>
    <formula>Lane__r.Destination_Location__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Location Id</label>
    <type>Text</type>
</CustomField>