force-app/main/default/objects/Lane_Price__c/fields/Delivery_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Postal_Code__c</fullName>
    <formula>Lane__r.Destination_Location__r.Postal_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery (PC)</label>
    <type>Text</type>
</CustomField>