force-app/main/default/objects/Lane_Price__c/fields/Lane__c.field-meta.xml
<CustomField>
    <fullName>Lane__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lane</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Lane Prices</relationshipLabel>
    <relationshipName>Lane_Prices</relationshipName>
    <type>Lookup</type>
</CustomField>