force-app/main/default/objects/Lane_Price__c/fields/Loading_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Loading_Country_Code__c</fullName>
    <formula>Lane__r.Loading_Location__r.Country_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loading Country Code</label>
    <type>Text</type>
</CustomField>