force-app/main/default/objects/Lane_Price__c/fields/Loading_Location_Id__c.field-meta.xml
<CustomField>
    <fullName>Loading_Location_Id__c</fullName>
    <formula>Lane__r.Loading_Location__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loading Location Id</label>
    <type>Text</type>
</CustomField>