force-app/main/default/objects/Lane_Price__c/fields/Loading_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Loading_Postal_Code__c</fullName>
    <formula>Lane__r.Loading_Location__r.Postal_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loading (PC)</label>
    <type>Text</type>
</CustomField>