force-app/main/default/objects/Lane_Price__c/fields/Old_Freight_Price__c.field-meta.xml
<CustomField>
    <fullName>Old_Freight_Price__c</fullName>
    <label>€ Old Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>