force-app/main/default/objects/Lane_Price__c/fields/PreferredCarrier__c.field-meta.xml
<CustomField>
    <fullName>PreferredCarrier__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Preferred Carrier</label>
    <type>Checkbox</type>
</CustomField>