force-app/main/default/objects/Lane_Price__c/fields/Price_2nd_Driver__c.field-meta.xml
<CustomField>
    <fullName>Price_2nd_Driver__c</fullName>
    <label>Price 2nd Driver</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>