force-app/main/default/objects/Lane_Price__c/fields/Price_Diff__c.field-meta.xml
<CustomField>
    <fullName>Price_Diff__c</fullName>
    <formula>( Freight_Price__c - Old_Freight_Price__c ) / Old_Freight_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Diff</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>