force-app/main/default/objects/Lane_Price__c/fields/Price_Ferry__c.field-meta.xml
<CustomField>
    <fullName>Price_Ferry__c</fullName>
    <label>Price Ferry</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>