force-app/main/default/objects/Lane_Price__c/fields/Price_Request__c.field-meta.xml
<CustomField>
    <fullName>Price_Request__c</fullName>
    <label>Price Request</label>
    <referenceTo>Price_Request__c</referenceTo>
    <relationshipLabel>Lane Prices</relationshipLabel>
    <relationshipName>Lane_Prices</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>