force-app/main/default/objects/Lane_Price__c/fields/Supplier_Name__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Name__c</fullName>
    <formula>Price_Request__r.Account__r.Name</formula>
    <label>Supplier Name</label>
    <type>Text</type>
</CustomField>