force-app/main/default/objects/Lane_Price__c/fields/Transit__c.field-meta.xml
<CustomField>
    <fullName>Transit__c</fullName>
    <label>Transit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>