force-app/main/default/objects/Lane_Price__c/fields/Two_Drivers__c.field-meta.xml
<CustomField>
    <fullName>Two_Drivers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Two Drivers</label>
    <type>Checkbox</type>
</CustomField>